Default to `ttyUSB0`
Having a default makes programming a bit more convenient.

- Added default env variable to `matrix/.cargo/config.toml`
- Adjusted `README.md` to reflect the change.
- Removed the template README in matrix directory.

--- a/matrix/Cargo.toml
+++ b/matrix/Cargo.toml
@@ -22,7 +22,6 @@ features = ["atmega328p", "rt"]
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
-rev = "8e4ba8f"
 features = ["rt", "arduino-uno"]
 
 [dependencies.embedded-hal]
@@ -38,7 +37,7 @@ opt-level = "s"
 [profile.release]
 panic = "abort"
 codegen-units = 1
-debug = true
+debug = false
 lto = true
 opt-level = "s"
 
